fix for header size on mobile

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -912,6 +912,9 @@ body.no-scroll {
 
 .uq-header .nav-primary__menu-toggle {
   margin-bottom: 0 !important;
+  font: initial;
+  font-size: 0.833rem;
+  line-height: normal;
 }
 
 .uq-site-header__navigation a {
